# MT

./: .gitignore  cifar.py  find_outliers.py  main.py  multiclass.bash  outlier_set.py  pyproject.toml  requirements.txt  resnet_cifar.py  results.csv  st_visualize.py  train_model.py
data/CIFAR/: test.json  train-val.json  train.json
datasets/: mini_imagenet.py  outlier_set.py
utils/: config.py  metrics.py  outlier_detection.py  parser.py
